# onefilellm

./: .gitignore  BUG_REPORT.md  CHANGELOG.md  CLAUDE_0.md  CLAUDE_1.md  CLAUDE_1_TASK.md  CLAUDE_2.md  CLAUDE_3.md  CLAUDE_4.md  CLAUDE_4_TASK.md  CLAUDE_n.md  FIXES_APPLIED.md  HOW_TO_FIX_ISSUE_74.md  PYPI_PRE_PUBLISH_CHECKLIST.md  PYPI_PUBLISHING_GUIDE.md  PYPI_QUICK_REFERENCE.md  RECOMMENDED_PYPROJECT_IMPROVEMENTS.md  TEST_STRUCTURE_DOCUMENTATION.md  cli.py  implementation.md  onefilellm.py  pyproject.toml  readme.md  requirements.txt  team_communication.md  test_before_publish.sh  test_summary_report.md  utils.py  web_app.py  webapp_redesign_brief.md
docs/: architecture.md
extras/: readme.md  redesign_onefilellm_webapp_py.md  web_app.py
tests/: ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  TEST_COMPATIBILITY_SUMMARY.md  TROUBLESHOOTING.md  add_test_markers.py  conftest.py  harness_claude1.py  pytest_integration.py  readme.md  run_all_tests.py  test_all.py  test_compatibility.py  test_recorded_alias_combined.py  test_recorded_alias_core_repo.py  test_recorded_alias_core_search.py  test_recorded_alias_invalid.py  test_recorded_alias_list.py  test_recorded_alias_list_core.py  test_recorded_alias_multi.py  test_recorded_alias_placeholder.py  test_recorded_alias_simple.py  test_recorded_alias_with_args.py  test_recorded_arxiv_attention.py  test_recorded_arxiv_gpt.py  test_recorded_arxiv_readme.py  test_recorded_complex_everything.py  test_recorded_complex_k8s_istio.py  test_recorded_complex_local_remote.py  test_recorded_complex_mcp.py  (+95 more)
(+196 files in other folders)
