[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onefilellm"
version = "0.1.0"
description = "A one-file LLM"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.11.1",
    "PyPDF2==2.10.0",
    "tiktoken",
    "nltk==3.7",
    "nbformat==5.4.0",
    "nbconvert==6.5.0",
    "youtube-transcript-api==0.4.1",
    "pyperclip==1.8.2",
    "wget==3.2",
    "tqdm==4.64.0",
    "rich==12.4.4",
    "pandas",
    "openpyxl",
    "xlrd",
    "tabulate",
    "PyYAML",
    "python-dotenv",
    "aiohttp",
    "readability-lxml",
    "lxml",
]

[project.urls]
"Homepage" = "https://github.com/jimmc414/onefilellm"
"Bug Tracker" = "https://github.com/jimmc414/onefilellm/issues"

[project.scripts]
onefilellm = "cli:entry_point"

[tool.setuptools]
py-modules = ["onefilellm", "cli", "utils"] 